--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <i class="material-icons">assignment</i>
         <span class="text">Project Journal</span>
      </a>
-    </li>
+</li>
 
-    </ul>
+</ul>
 
 
 
@@ -83,6 +83,7 @@
     <div class="main">
         <h2 class="title">Ismael Garrido Mansoa</h2>
         <p class="main_description">Senior Computer Science & Engineering Student.<br/> Madrid, Spain.</p>
+        <!-- <i class="large material-icons" id="scroll_mat">expand_more</i> -->
     </div>
 </nav-section>
 
