--- a/projects.html
+++ b/projects.html
@@ -87,6 +87,9 @@
     </div>
 </nav-section>
 
+<p><a class="black-text lab_links" href="PROJECTS/Project1/project1.html">Project 1</a></p>
+<p><a class="black-text lab_links" href="PROJECTS/midterm/index.html">Midterm exam</a></p>
+<p><a class="black-text lab_links" href="PROJECTS/Project2/project2.html">Project 2</a></p>
 
 <div class="space_aux">
     
