--- a/labs.html
+++ b/labs.html
@@ -91,10 +91,7 @@
 <p><a class="black-text lab_links" href="LABS/Lab3/Lab3.html">Laboratory 3</a></p>
 <p><a class="black-text lab_links" href="LABS/Lab4/Lab4.html">Laboratory 4</a></p>
 <p><a class="black-text lab_links" href="PROJECTS/Project2/project2.html">Laboratory 5</a></p>
-<p class="black-text lab_5_desc">
-    Lab 5 is part of Project 2. I did the database back-end for this lab.
-    The user should be able to send a suggestion throught the form and see <br>it after in the "Posted Suggestions & Ideas".
-</p>
+<p><a class="black-text lab_links" href="LABS/lab6/">Laboratory 6</a></p>
 
 
 
