--- a/projects.html
+++ b/projects.html
@@ -90,6 +90,9 @@
 <p><a class="black-text lab_links" href="PROJECTS/Project1/project1.html">Project 1</a></p>
 <p><a class="black-text lab_links" href="PROJECTS/midterm/index.html">Midterm exam</a></p>
 <p><a class="black-text lab_links" href="PROJECTS/Project2/project2.html">Project 2</a></p>
+<p><a class="black-text lab_links" href="PROJECTS/project3/">Project 3</a></p>
+<p><a class="black-text lab_links" href="https://github.com/maysgar/whales_react">Github repository with source code</a></p>
+<p><a class="black-text lab_links" href="PROJECTS/finalexam/final.html">Final exam</a></p>
 
 <div class="space_aux">
     
