--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
     <div class="main">
         <h2 class="title">Ismael Garrido Mansoa</h2>
         <p class="main_description">Senior Computer Science & Engineering Student.<br/> Madrid, Spain.</p>
-        <!-- <i class="large material-icons" id="scroll_mat">expand_more</i> -->
+        <i class="large material-icons" id="scroll_mat">expand_more</i>
+        <!-- <p class="red-text text-darken-4" id="hidden_text">Scroll down to check it out!<br> <i class="large material-icons" id="scroll_mat">expand_more</i></p> -->
     </div>
 </nav-section>
 
